--- a/index.html
+++ b/index.html
@@ -6,13 +6,49 @@
     <title>Countdowns and Life Hourglass</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <style>
+        <style>
+        :root {
+            --bg-gradient-start: #1A202C;
+            --bg-gradient-end: #2D3748;
+            --text-main: #e2e8f0;
+            --nav-bg: rgba(30,41,59,0.8);
+            --nav-hover-bg: #334155;
+            --nav-text: #94a3b8;
+            --nav-hover-text: #e2e8f0;
+            --timer-card-bg: rgba(45, 55, 72, 0.7);
+            --timer-card-border: rgba(255, 255, 255, 0.1);
+            --input-bg: #2d3748;
+            --input-border: #4a5568;
+            --input-text: #e2e8f0;
+            --btn-primary-bg: #38a169;
+            --btn-primary-hover-bg: #2f855a;
+            --btn-secondary-bg: #4a5568;
+            --btn-secondary-hover-bg: #2d3748;
+        }
+        body.light-theme {
+            --bg-gradient-start: #f8fafc;
+            --bg-gradient-end: #e2e8f0;
+            --text-main: #1a202c;
+            --nav-bg: rgba(255,255,255,0.8);
+            --nav-hover-bg: #e2e8f0;
+            --nav-text: #334155;
+            --nav-hover-text: #1a202c;
+            --timer-card-bg: rgba(255, 255, 255, 0.7);
+            --timer-card-border: rgba(0, 0, 0, 0.1);
+            --input-bg: #ffffff;
+            --input-border: #cbd5e0;
+            --input-text: #1a202c;
+            --btn-primary-bg: #3182ce;
+            --btn-primary-hover-bg: #2b6cb0;
+            --btn-secondary-bg: #cbd5e0;
+            --btn-secondary-hover-bg: #a0aec0;
+        }
         body {
-            font-family: 'Inter', sans-serif;
+            font-family: "Inter", sans-serif;
             -webkit-font-smoothing: antialiased;
             -moz-osx-font-smoothing: grayscale;
+            color: var(--text-main);
         }
-
         /* Stilovi za prekidač (toggle switch) */
         .switch {
             position: relative;
@@ -58,24 +94,20 @@
         }
 
         .gradient-background {
-            background-image: linear-gradient(to top right, #1A202C, #2D3748);
-        }
-
-        .timer-card {
-            background-color: rgba(45, 55, 72, 0.7); 
-            backdrop-filter: blur(10px);
-            -webkit-backdrop-filter: blur(10px);
-            border: 1px solid rgba(255, 255, 255, 0.1);
-        }
-        #customEventCountdownContainer.timer-card {
-             background-color: rgba(67, 56, 202, 0.3); 
-             border: 1px solid rgba(129, 140, 248, 0.2); 
-        }
-
-        .content-enter { 
+            background-image: linear-gradient(to top right, var(--bg-gradient-start), var(--bg-gradient-end));
             opacity: 0;
             transform: translateY(-20px);
             transition: opacity 0.5s ease-out, transform 0.5s ease-out;
+        }
+        .timer-card {
+            background-color: var(--timer-card-bg);
+            backdrop-filter: blur(10px);
+            -webkit-backdrop-filter: blur(10px);
+            border: 1px solid var(--timer-card-border);
+        }
+        #customEventCountdownContainer.timer-card {
+             background-color: rgba(67, 56, 202, 0.3);
+             border: 1px solid rgba(129, 140, 248, 0.2);
         }
         .content-enter-active {
             opacity: 1;
@@ -163,42 +195,43 @@
         }
 
         .input-style {
-            background-color: #2d3748; 
-            border: 1px solid #4a5568; 
-            color: #e2e8f0; 
-            border-radius: 0.375rem; 
-            padding: 0.5rem 0.75rem; 
+        .input-style {
+            background-color: var(--input-bg);
+            border: 1px solid var(--input-border);
+            color: var(--input-text);
+            border-radius: 0.375rem;
+            padding: 0.5rem 0.75rem;
             width: 100%;
         }
         .input-style[type="radio"] {
-            width: auto; 
+            width: auto;
         }
         .input-style:focus {
             outline: none;
-            border-color: #38a169; 
-            box-shadow: 0 0 0 2px rgba(56, 161, 105, 0.5); 
+            border-color: var(--btn-primary-bg);
+            box-shadow: 0 0 0 2px rgba(56, 161, 105, 0.5);
         }
         .btn-primary {
-            background-color: #38a169; 
+            background-color: var(--btn-primary-bg);
             color: white;
             padding: 0.5rem 1rem;
-            border-radius: 0.375rem; 
-            font-weight: 500; 
+            border-radius: 0.375rem;
+            font-weight: 500;
             transition: background-color 0.2s;
         }
         .btn-primary:hover {
-            background-color: #2f855a; 
+            background-color: var(--btn-primary-hover-bg);
         }
         .btn-secondary {
-            background-color: #4a5568; 
-            color: #e2e8f0; 
+            background-color: var(--btn-secondary-bg);
+            color: var(--text-main);
             padding: 0.5rem 1rem;
-            border-radius: 0.375rem; 
-            font-weight: 500; 
+            border-radius: 0.375rem;
+            font-weight: 500;
             transition: background-color 0.2s;
         }
         .btn-secondary:hover {
-            background-color: #2d3748; 
+            background-color: var(--btn-secondary-hover-bg);
         }
 
         /* Stilovi za Životni Pješčani Sat stranicu */
@@ -258,9 +291,9 @@
         ::-webkit-scrollbar-thumb:hover { background: #0ea5e9; }
 
         /* Navigacija */
-        .nav-button { padding: 0.5rem 1rem; border-radius: 0.375rem; font-weight: 500; transition: background-color 0.2s, color 0.2s; color: #94a3b8; }
-        .nav-button:hover { background-color: #334155; color: #e2e8f0; }
-        .nav-button.active { background-color: #4f46e5; color: white; }
+        nav { background-color: var(--nav-bg); }
+        .nav-button { padding: 0.5rem 1rem; border-radius: 0.375rem; font-weight: 500; transition: background-color 0.2s, color 0.2s; color: var(--nav-text); }
+        .nav-button:hover { background-color: var(--nav-hover-bg); color: var(--nav-hover-text); }
         .page-content { width: 100%; display: flex; flex-direction: column; align-items: center; flex-grow: 1; }
         .main-content-wrapper.vertical-center-single { flex-grow: 1; justify-content: center; }
     </style>
@@ -353,6 +386,17 @@
                             <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
                         </button>
                     </div>
+                    <div class="mb-8">
+                        <h3 class="text-xl font-semibold text-sky-400 mb-4 border-b border-slate-700 pb-2">Appearance</h3>
+                        <div class="flex items-center justify-between py-2">
+                            <label for="themeToggle" class="text-slate-300 font-medium cursor-pointer select-none">Use light theme</label>
+                            <label class="switch">
+                                <input type="checkbox" id="themeToggle">
+                                <span class="slider round"></span>
+                            </label>
+                        </div>
+                    </div>
+
 
                     <div class="mb-8">
                         <h3 class="text-xl font-semibold text-sky-400 mb-4 border-b border-slate-700 pb-2">Countdowns</h3>
@@ -434,12 +478,21 @@
         const CUSTOM_EVENT_DISPLAY_FORMAT_KEY = 'customEventDisplayFormat';
         const CUSTOM_EVENT_MASTER_VISIBLE_KEY = 'customEventMasterVisible';
         const LIFE_CALENDAR_AGE_KEY = 'fomoLifeCalendarAge';
+        const THEME_KEY = "theme";
         const LIFE_CALENDAR_MAX_AGE_KEY = 'fomoLifeCalendarMaxAge';
         
         let currentVisiblePage = 'pageTimers'; 
         let customEventInterval;
         let yearCountdownInterval;
         let lifeHourglassInitialized = false;
+
+        function applyTheme(theme) {
+            if (theme === "light") {
+                document.body.classList.add("light-theme");
+            } else {
+                document.body.classList.remove("light-theme");
+            }
+        }
 
         // --- ELEMENTI ZA STRANICU ODBROJAVANJA ---
         const pageTimers = document.getElementById('pageTimers');
@@ -486,6 +539,7 @@
         const unifiedCustomEventVisibilityToggle = document.getElementById('unifiedCustomEventVisibilityToggle');
         const unifiedCustomEventSettingsContent = document.getElementById('unifiedCustomEventSettingsContent');
         const unifiedCustomEventNameInput = document.getElementById('unifiedCustomEventNameInput');
+        const themeToggle = document.getElementById("themeToggle");
         const unifiedCustomEventDateInput = document.getElementById('unifiedCustomEventDateInput');
         const unifiedDisplayDaysOnlyRadio = document.getElementById('unifiedDisplayDaysOnly');
         const unifiedDisplayFullTimeRadio = document.getElementById('unifiedDisplayFullTime');
@@ -553,6 +607,7 @@
                 // Učitaj postavke za Životni Pješčani Sat
                 const storedAge = localStorage.getItem(LIFE_CALENDAR_AGE_KEY);
                 const storedMaxAge = localStorage.getItem(LIFE_CALENDAR_MAX_AGE_KEY);
+                if (themeToggle) themeToggle.checked = localStorage.getItem(THEME_KEY) === "light";
                 if(unifiedAgeInputLifeHourglass) unifiedAgeInputLifeHourglass.value = (storedAge !== null && !isNaN(parseInt(storedAge))) ? parseInt(storedAge) : '';
                 if(unifiedMaxAgeDisplayInputLifeHourglass) unifiedMaxAgeDisplayInputLifeHourglass.value = (storedMaxAge !== null && !isNaN(parseInt(storedMaxAge)) && parseInt(storedMaxAge) > 0) ? parseInt(storedMaxAge) : 80;
             }
@@ -615,6 +670,13 @@
                 if(unifiedCustomEventNameInput) unifiedCustomEventNameInput.value = '';
                 if(unifiedCustomEventDateInput) unifiedCustomEventDateInput.value = '';
                 renderCustomEventCountdown(); 
+            });
+        }
+        if (themeToggle) {
+            themeToggle.addEventListener("change", function() {
+                const theme = this.checked ? "light" : "dark";
+                localStorage.setItem(THEME_KEY, theme);
+                applyTheme(theme);
             });
         }
         
@@ -884,6 +946,9 @@
 
         // --- GLAVNA INICIJALIZACIJA APLIKACIJE ---
         function initializeApp() {
+            const storedTheme = localStorage.getItem(THEME_KEY) || "dark";
+            applyTheme(storedTheme);
+            if (themeToggle) themeToggle.checked = storedTheme === "light";
             updateDailyCountdown();
             setInterval(updateDailyCountdown, 1000);
 
