--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
         .main-content-wrapper.vertical-center-single { flex-grow: 1; justify-content: center; }
     </style>
 </head>
-<body class="flex flex-col items-center min-h-screen m-0 text-slate-100 gradient-background">
+<body class="flex flex-col items-center min-h-screen m-0 gradient-background">
 
     <nav class="w-full bg-slate-800/80 backdrop-blur-md shadow-lg p-3 sticky top-0 z-40">
         <div class="max-w-6xl mx-auto flex justify-between items-center"> <div class="flex justify-center space-x-3 sm:space-x-6 flex-grow"> <button id="navTimers" data-page="pageTimers" class="nav-button active">Countdowns</button>
@@ -316,7 +316,7 @@
                 <div id="customEventCountdownContainer" class="timer-card rounded-2xl shadow-2xl mb-6 md:mb-8 w-full p-6 md:p-8" style="display: none;">
                     <div class="flex items-center justify-center mb-4 md:mb-5">
                         <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-indigo-300 mr-3 flex-shrink-0 h-7 w-7 md:h-8 md:w-8"><rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect><line x1="16" y1="2" x2="16" y2="6"></line><line x1="8" y1="2" x2="8" y2="6"></line><line x1="3" y1="10" x2="21" y2="10"></line></svg>
-                        <h3 id="customEventNameDisplay" class="text-2xl md:text-3xl font-semibold text-slate-100 truncate" title="Event name">Event name</h3>
+                        <h3 id="customEventNameDisplay" class="text-2xl md:text-3xl font-semibold truncate" title="Event name">Event name</h3>
                     </div>
                     <div id="customEventTimeDisplay" class="flex justify-center items-end text-center mt-1 mb-2">
                         <div id="customEventDaysSegment" class="custom-event-time-segment px-1">
