--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         :root {
             --bg-gradient-start: #1A202C;
             --bg-gradient-end: #2D3748;
-            --text-main: #e2e8f0;
+        --text-main: #f1f5f9;
             --nav-bg: rgba(30,41,59,0.8);
             --nav-hover-bg: #334155;
             --nav-text: #94a3b8;
@@ -291,6 +291,7 @@
         nav { background-color: var(--nav-bg); }
         .nav-button { padding: 0.5rem 1rem; border-radius: 0.375rem; font-weight: 500; transition: background-color 0.2s, color 0.2s; color: var(--nav-text); }
         .nav-button:hover { background-color: var(--nav-hover-bg); color: var(--nav-hover-text); }
+        .nav-button.active { background-color: #4f46e5; color: white; }
         .page-content { width: 100%; display: flex; flex-direction: column; align-items: center; flex-grow: 1; }
         .main-content-wrapper.vertical-center-single { flex-grow: 1; justify-content: center; }
     </style>
